--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -1,3 +1,17 @@
+.navbar{
+  background: url(/assets/images/bg-navbar.jpg);
+  border: none;
+}
+
+.navbar-nav > li > a {
+  padding-top: 10px; 
+  padding-bottom: 10px; 
+}
+
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus{
+  background-color: transparent;
+}
+
 .acme-navbar-text{
   color: white;
 }
