--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -13,26 +13,26 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
 // endbower
 
 body { 
-  background: url(/assets/images/bg-global.jpg) !important; 
+  //background: url(/assets/images/bg-global.jpg) !important; 
 }
 
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
+// .browsehappy {
+//   margin: 0.2em 0;
+//   background: #ccc;
+//   color: #000;
+//   padding: 0.2em 0;
+// }
 
-.thumbnail {
-  height: 200px;
+// .thumbnail {
+//   height: 200px;
 
-  img.pull-right {
-    width: 50px;
-  }
-}
+//   img.pull-right {
+//     width: 50px;
+//   }
+// }
 
 .container{
-  margin-top: 60px;
+  margin-top: 52px;
 }
 /**
  *  Do not remove this comments bellow. It's the markers used by gulp-inject to inject
