--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,20 +1,26 @@
-
 <div class="container">
-  <div class="jumbotron">  
-    <acme-contentlist/>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-6 col-md-4" ng-repeat="awesomeThing in main.awesomeThings | orderBy:'rank'">
-      <div class="thumbnail">
-        <img class="pull-right" ng-src="assets/images/{{ awesomeThing.logo }}" alt="{{ awesomeThing.title }}">
-        <div class="caption">
-          <h3>{{ awesomeThing.title }}</h3>
-          <p>{{ awesomeThing.description }}</p>
-          <p><a ng-href="{{awesomeThing.url}}">{{ awesomeThing.url }}</a></p>
-        </div>
+  <div class="role role1">
+    <div class="category-board">      
+      <div ng-repeat="item in role1Categories" class="category-item">
+        <category-item category="item"/>
       </div>
     </div>
-  </div>
 
+<!--     <img src="/assets/images/role1.png"> -->
+  
+ </div>
+
+
+  <!-- <div class="fill"></div> -->
+
+
+  <div class="role role2">
+    <div class="category-board" >  
+      <div ng-repeat="item in role2Categories" class="category-item">
+        <category-item category="item"/>
+      </div>
+    </div>
+    <!--     <img src="/assets/images/role2.jpg">
+    -->  
+  </div>
 </div>
