[topic] edit publish and show

--- a/src/app/components/category/nav.html
+++ b/src/app/components/category/nav.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div>
     <div ng-repeat="category in categories">
-      xxxxx
+      <a ui-sref="topic">{{category.name}}</a>
       <img src="{{category.logo}}">
     </div>    
   </div>
