--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,7 +1,6 @@
-<div>
+<div id="main-container">
   <!-- 话题列表 不同展示方式 -->
   <div ng-repeat="i in [10,11,12,13,14]">
     <topic-profile/>
   </div>
-
 </div>
