--- a/src/app/common/sky-carousel/sky-carousel.html
+++ b/src/app/common/sky-carousel/sky-carousel.html
@@ -1,13 +1,39 @@
 <div id="sky-carousel" class="sky-carousel">
   <div class="sky-carousel-wrapper">
     <ul class="sky-carousel-container">
-      <li ng-repeat="slide in items">
-        <img src="{{slide.image}}" alt="" />
+      <li class="ng-scope">
+        <img src="/assets/images/identity1.png" alt="">
         <div class="sc-content">
           <h2>fdsfafd</h2>
-          <p>{{slide.text}}</p>
+          <p class="ng-binding">xxxxx</p>
+        </div>
+      </li>
+      <li class="ng-scope">
+        <img src="/assets/images/identity1.png" alt="">
+        <div class="sc-content">
+          <h2>fdsfafd</h2>
+          <p class="ng-binding">xxxxx</p>
+        </div>
+      </li><li class="ng-scope">
+        <img src="/assets/images/identity1.png" alt="">
+        <div class="sc-content">
+          <h2>fdsfafd</h2>
+          <p class="ng-binding">xxxxx</p>
+        </div>
+      </li><li class="ng-scope">
+        <img src="/assets/images/identity1.png" alt="">
+        <div class="sc-content">
+          <h2>fdsfafd</h2>
+          <p class="ng-binding">xxxxx</p>
+        </div>
+      </li><li class="ng-scope">
+        <img src="/assets/images/identity1.png" alt="">
+        <div class="sc-content">
+          <h2>fdsfafd</h2>
+          <p class="ng-binding">xxxxx</p>
         </div>
       </li>
     </ul>
   </div>
 </div>
+<button class="btn default-btn">下一步</button>
