--- a/src/app/components/topic/topic.profile.scss
+++ b/src/app/components/topic/topic.profile.scss
@@ -1,6 +1,6 @@
 .topic-profile{
-  background: #EEEEE0;
-  width: 300px;
+  background: #ffffff;
+  width: 260px;
   max-width: 80%;
   margin: auto;
   border-radius: 5px;
@@ -11,18 +11,172 @@
   display: inline-block;
   float: left;
 
-  .user-bar{
-    height: 30px;
-    line-height: 30px;
-    .follow-btn{
+  .header-wrapper{
+    //background: #EEEEE0;
+    height: 40px;
+    .avatar{
+      height: 100%;
+      line-height: 100%;
       float: right;
     }
-    margin-bottom: 10px;
+    .title{
+      height: 40px;
+      line-height: 40px;
+      max-width: 200px;
+      overflow: hidden;
+      float: left;
+      font-weight: bold;
+    }
   }
 
-  .key-content{
-    clip:rect(0px,60px,200px,0px); 
+  .content-wrapper {
+    min-height: 42px;
+    background: #FFF;
+    position: relative;
+    box-shadow: 1px 1px 0 0 #EEE;
+    border-radius: 3px;
+    border: 1px solid #EEE;
+    padding: 5px 5px 5px 5px;
+
+    .extra{
+      position: absolute;
+      bottom: 0;
+    }
+  }
+
+  .arrow:before {
+    /* margin-top: -11px; */
+    bottom: auto;
+    left: auto;
+    /* top: 28px; */
+    right: 10px;
+    top: -6px;
+    position: absolute;
+    content: "";
+    width: .6em;
+    height: .6em;
+    background-image: none;
+    -webkit-transform: rotate(225deg);
+    -ms-transform: rotate(225deg);
+    transform: rotate(135deg);
+    z-index: 2;
+    -webkit-transition: background 0.1s linear;
+    transition: background 0.1s linear;
+    background-color: #FFF;
+    border-left: 1px solid #EEE;
+    border-bottom: 1px solid #EEE;
   }
 
 }
+
+i.icon{
+  display: inline-block;
+  opacity: .75;
+  margin: 0 .25em 0 0;
+  width: 1.23em;
+  height: 1em;
+  font-size: 1em;
+  font-family: Icons;
+  font-style: normal;
+  line-height: 1;
+  font-weight: 400;
+  text-decoration: inherit;
+  text-align: center;
+  speak: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+a.gray{
+  color: #444;
+}
+
+i.icon.heart.empty:before {
+  content: "\f08a";
+}
+
+i.icon.heart:before {
+  content: "\f004";
+}
+
+.topic-profile-form {
+  font-size: .875em;
+
+  border-top: 1px solid #EEE;
+  input{
+    width: 100%;
+    height: 30px;
+  }
+  i.icon.right:before {
+    content: "\f061";
+  }
+
+  .icon.input>.icon {
+    cursor: default;
+    position: absolute;
+    opacity: .5;
+    top: 0;
+    right: 0;
+    margin: 0;
+    width: 2.6em;
+    height: 100%;
+    padding-top: .82em;
+    text-align: center;
+    border-radius: 0 .3125em .3125em 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: opacity .3s ease-out;
+    -moz-transition: opacity .3s ease-out;
+    transition: opacity .3s ease-out;
+  }
+}
+
+.about-me{
+  position: absolute;
+  /* top: 0; */
+  /* display: none; */
+  /* left: 100px; */
+  width: 400px;
+  _width: 401px;
+  height: 500px;
+  background: #d5d5d5;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  /* border-radius: 6px; */
+  overflow: hidden;
+
+  .user-bg{
+    position: absolute;
+  }
+
+  .show{
+    position: absolute;
+    left: 0;
+    top: 100px;
+  }
+
+  .basic-info{
+    //float: left;
+    width: 180px;
+    padding: 0 9px;
+  }
+
+  dl {
+    position: relative;
+    float: left;
+    width: 99px;
+    height: 99px;
+    margin: 1px 0 0 1px;
+    background: #fafafa;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    overflow: hidden;
+  }
+}
+
 
