--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -13,6 +13,7 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
 // endbower
 
 body { 
+  background: #F7F6F2;
   //background: url(/assets/images/bg-global.jpg) !important; 
 }
 
