--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,11 +1,10 @@
-<div class="container">
+<div class="container home">
   <!-- 话题列表 不同展示方式 -->
-  <div class="col-lg-9 col-md-12 col-sm-12">
-    <div ng-repeat="topic in topTopics">
-      <topic-profile topic="topic"/>
-    </div>    
+  <div deckgrid source="topTopics" class="col-lg-10 col-md-12 col-sm-12 deckgrid">
+    <topic-profile topic="card"/>
   </div>
-  <div class="col-lg-3 visible-lg">
+
+  <div class="col-lg-2 visible-lg">
     <ul class="list-group">
       <a class="list-group-item on" href="http://www.jq22.com/jquery-plugins背景-1-jq1" data-para="time"><i class="fa fa-flag"></i> &nbsp;最新发布</a>
       <a class="list-group-item" href="http://www.jq22.com/jquery-plugins背景-1-jq4" data-para="comments"><i class="fa fa-heart"></i> &nbsp;最多收藏</a>
