--- a/src/app/components/topic/topic.profile.scss
+++ b/src/app/components/topic/topic.profile.scss
@@ -10,7 +10,7 @@
   padding: 10px;
   display: inline-block;
   float: left;
-
+  box-shadow: 0 4px 10px rgba(0,0,0,.1);
   .header-wrapper{
     //background: #EEEEE0;
     height: 40px;
@@ -44,7 +44,7 @@
     }
   }
 
-  .arrow:before {
+  .topic-arrow:before {
     /* margin-top: -11px; */
     bottom: auto;
     left: auto;
@@ -59,7 +59,6 @@
     -webkit-transform: rotate(225deg);
     -ms-transform: rotate(225deg);
     transform: rotate(135deg);
-    z-index: 2;
     -webkit-transition: background 0.1s linear;
     transition: background 0.1s linear;
     background-color: #FFF;
@@ -134,49 +133,3 @@ i.icon.heart:before {
     transition: opacity .3s ease-out;
   }
 }
-
-.about-me{
-  position: absolute;
-  /* top: 0; */
-  /* display: none; */
-  /* left: 100px; */
-  width: 400px;
-  _width: 401px;
-  height: 500px;
-  background: #d5d5d5;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  /* border-radius: 6px; */
-  overflow: hidden;
-
-  .user-bg{
-    position: absolute;
-  }
-
-  .show{
-    position: absolute;
-    left: 0;
-    top: 100px;
-  }
-
-  .basic-info{
-    //float: left;
-    width: 180px;
-    padding: 0 9px;
-  }
-
-  dl {
-    position: relative;
-    float: left;
-    width: 99px;
-    height: 99px;
-    margin: 1px 0 0 1px;
-    background: #fafafa;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-    overflow: hidden;
-  }
-}
-
-
