--- a/src/app/components/user/user.login.scss
+++ b/src/app/components/user/user.login.scss
@@ -3,6 +3,11 @@
 /* Login Box
 =================================================================== 
 */
+.login-bg{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 .login-box {
   width: 400px;
