--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -1,105 +1,92 @@
-.role{
-  position: absolute;
-  width: 50%;
-  //width: 100%;
-  height: 100%;
-  //float: left;
-  //display: inline;
-  // > img{
-  //   position: absolute;
-  //   max-width: 100%;
-  //   bottom: 0;
-  // }
+/*
+ * angular-deckgrid-demo
+ *
+ * Copyright(c) 2013 André König <akoenig@posteo.de>
+ * MIT Licensed
+ *
+ */
+
+/**
+ * @author André König (andre.koenig@posteo.de)
+ *
+ */
+
+
+
+.deckgrid {
+
 }
 
-.role1{
-  background: url(/assets/images/noise.png) #79c5ce;
-  left: 0;
+.deckgrid[deckgrid]::before {
+    content: '5 .column.size-1-5';
+    font-size: 0;
+    visibility:hidden;
 }
 
-.role2{
-  background: url(/assets/images/noise.png) #bebbb4;
-  left: 50%;
-  // img{
-  //   left: 10;
-  // }
-  // .category-board{
-  //   max-width: 100%;
-  //   max-height: 500;
-  // }
+.deckgrid .column {
+    float:left;
+    width: 300px;
 }
 
-.category-board{
-  display: inline-block;
-  //max-width: 100%;
-  //max-height: 100%;
-  .category-item{
-    float: left;
-  }
-}
-
-// // .fill {
-// //   position: fixed!important;
-// //   top: 0;
-// //   left: 50%;
-// //   margin-left: -6px;
-// //   width: 14px;
-// //   height: 100%;
-// //   background-image: url(/assets/images/fill_line.png);
-// //   -webkit-transform: translate3d(0,0,0);
-// //   z-index: -5;
-// // }
-
-// .role{
-//   //position: absolute;
-//   //width: 50%;
-//   width: 100%;
-//   height: 100%;
-//   //display: inline;
-//   > img{
-//     position: absolute;
-//     max-width: 100%;
-//     bottom: 0;
-//   }
+// .deckgrid .column.size-1-5 {
+//     width:200px;
 // }
 
-// .role1{
-//   background: url(/assets/images/noise.png) #79c5ce;
-//   //right: 50%;
-//   width: 100%;
-//   height: 100%;
-//   > img{
-//     right: 10;
-//   }
-//   .category-board{
-//     position: static;
-//     //max-width: 100%;
-//     //max-height: 500;
-//     .ca1{
-//       //width: 100%;
-//       //height: 100%;
-//       background: url(/assets/images/clouds1.png);
-//     }
-//     .ca2{
-//       background: url(/assets/images/clouds2.png);
-//     }
-//     .ca3{
-//       background: url(/assets/images/clouds3.png);
-//     }
-//     .ca4{
-//       background: url(/assets/images/clouds4.png);
-//     }
-//   }
+// .deckgrid .column.size-1-4 {
+//     width:200px;
 // }
 
-// .role2{
-//   background-color: #44C650;
-//   left: 50%;
-//   img{
-//     left: 10;
-//   }
-//   .category-board{
-//     max-width: 100%;
-//     max-height: 500;
-//   }
+// .deckgrid .column.size-1-3 {
+//     width:250px;
 // }
+
+// .deckgrid .column.size-1-2 {
+//     width:250px;
+// }
+
+// .deckgrid .column.size-1-1 {
+//     width:280px;
+// }
+
+@media screen and (max-width: 1000px) {
+    .deckgrid {
+        width:900px;
+    }
+
+    .deckgrid[deckgrid]::before {
+        content: '3 .column.size-1-4';
+    }
+}
+
+@media screen and (max-width: 840px) {
+    .deckgrid {
+        width:700px;
+    }
+
+    .deckgrid[deckgrid]::before {
+        content: '2 .column.size-1-3';
+    }
+}
+
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .deckgrid {
+        margin:100px auto;
+        width:400px;
+    }
+
+    .deckgrid[deckgrid]::before {
+        content: '1 .column.size-1-2';
+    }
+}
+
+@media only screen and (max-device-width : 320px),
+       only screen and (max-width : 480px) {
+    .deckgrid {
+        width:300px;
+    }
+
+    .deckgrid[deckgrid]::before {
+        content: '1 .column.size-1-1';
+    }
+}
